# AI-Powered-Performance-Monitoring-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  agent_controller.py  dashboard.py  incident_deduplicator.py  machine_config.py  main.py
agent/anomaly/: anomaly_detector.py  feature_engineering.py
agent/artifact/: artifact_collector.py  metadata_builder.py
agent/collectors/: cpu_collector.py  disk_collector.py  jvm_collector.py  log_collector.py  machine_collector.py  memory_collector.py  network_collector.py  remote_machine_collector.py  trace_collector.py
agent/diagnostics/: heap_dump.py  thread_dump.py
agent/jira/: attachment_handler.py  issue_creator.py  jira_payload_builder.py
agent/notification/: console_notifier.py  slack_notifier.py
agent/rca/: llm_analyzer.py  rca_engine.py
agent/utils/: logger.py
ai_perf_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: config.yaml  thresholds.yaml
docker/: Dockerfile  docker-compose.yml
docs/: api_reference.md  architecture.md  demo_guide.md
scripts/: run_agent.sh  simulate_cpu_spike.py  simulate_memory_leak.java  simulate_memory_pressure.py
tests/: test_adaptive_anomaly.py  test_agent_controller.py  test_anomaly.py  test_dashboard.py  test_decision.py  test_extended_collectors.py  test_incident_deduplicator.py  test_jira_payload.py  test_jvm_collector.py  test_llm_analyzer.py  test_machine_collector.py  test_machine_config.py  test_rca_solutions.py  test_retention_and_logging.py  test_trace_collector.py
