[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-perf-agent"
version = "0.1.0"
description = "AI-powered performance monitoring agent with JVM diagnostics and JIRA automation"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{ name = "AI Performance Agent Contributors" }]
dependencies = [
    "psutil>=5.9.8",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "github-copilot-sdk>=1.0.6",
]

[project.optional-dependencies]
ml = [
    "numpy>=1.26.0",
    "scikit-learn>=1.3.2",
]
test = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["agent*"]
